# etc_public

./: .gitignore  Pipfile  README.md  message.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature.md  feature_request.md  issue-template.md  simple.md
.github/workflows/: slack_notify.yml  success_payload.json  test_dispatch.yml
aws/cfn/: CFn_AssociationTest.yml
aws/lambda/: inspector_notify.py  reko_image-to-cv2.py  reko_image-to-label.py
gas/: mailCrawler.js
line-bot/: README.md  samconfig.toml  template.yaml
line-bot/crawler_kita/: kita_app.py
line-bot/crawler_taito/: taito_app.py
line-bot/crawler_toei/: toei_app.py
line-bot/events/: event.json
line-bot/hello_world/: app.py
line-bot/tests/unit/: test_handler.py
local_macos/: neo4j_appmesh.md  stopcovid19_selenium.py
local_macos/datadog/: createUser.py
local_macos/dify_docker/: docker-compose.yaml
local_macos/dify_docker/volumes/app/storage/privkeys/1ab0ac52-1a68-41f7-829f-5d504611617b/: private.pem
local_macos/dify_docker/volumes/weaviate/: classifications.db  schema.db
local_macos/http_server/: index.html
local_macos/jupyter/: Pipfile  awsCDK_dot.ipynb  aws_wa-tools.ipynb  billing.ipynb  neo4j.ipynb
local_macos/jupyter/.ipynb_checkpoints/: Pipfile-checkpoint  billing-checkpoint.ipynb
local_macos/jupyter/notebook/02-Visualization/: Air-Routes-Gremlin.ipynb  Air-Routes-openCypher.ipynb
local_macos/rag-sample/: Dockerfile  app.py  app_BK.py  pyproject.toml  qa_app.py  requirements.txt
local_macos/rag-sample/db/: chroma.sqlite3
local_macos/rag-sample/templates/: index.html
mcp-local/: package-lock.json  package.json
mcp-local/src/: client.ts  server.ts
openai/chatgpt-client/: .env  gptClient.js  gptClient.ts  index.js  index.ts  package-lock.json  package.json
openai/python-api/: cdk.json  package-lock.json  package.json
openai/python-api/functions/: authorizer.py
openai/python-api/functions/hello/: lambda_function.py  pyproject.toml
openai/python-api/lib/: python-api-stack.ts
openai/python-api/slack-bot/: manifest.yml
openai/python-api/test/: python-api.test.ts
paiza/: 2021_q3_token_passing.py  HireRoo_20230106.py  loops_multiple_edges.py
paiza/tests/: conftest.py  test_token_passing.py
paiza/tests/data/: token_passing_01_input  token_passing_02_input
slack/: slack_interpreter.py  slackbot_eventhook.py
