[tool.poetry]
name = "rag-sample"
version = "0.1.0"
description = ""
authors = ["terusaku <sunblo117@gmail.com>"]
readme = "README.md"
packages = [{include = "rag_packages"}]

[tool.poetry.dependencies]
python = "3.11.9"
flask = "^3.0.3"
transformers = "^4.44.0"
pymupdf = "^1.24.9"
langchain = "*"
#langchain-community = "^0.2.11"
langchain-community = "*"
anthropic = "*"
langchain-anthropic = "^0.3.1"
openai = "^1.59.3"
faiss-cpu = "^1.9.0.post1"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
