[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["terusaku <sunblo117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
requests = "^2.31.0"
langchain = "^0.0.228"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
