[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["terusaku <sunblo117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
langchain = "^0.0.228"


[tool.poetry.group.local.dependencies]
boto3 = "^1.28.73"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
