[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["terusaku <sunblo117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.73"
openai = "^0.27.8"
requests = "^2.29"
urllib3 = "^1.26"
langchain = "^0.3.7"


[tool.poetry.group.local.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
